(attempt) to fix spacing issues in scss files

--- a/css/aboutme.scss
+++ b/css/aboutme.scss
@@ -1,6 +1,3 @@
-body {
-}
-
 #team {
 	padding: 2% 12%;
 	width: 100%;
@@ -12,9 +9,9 @@ body {
 
 	.officer__container, .coach__container {
 		position: relative;
-    margin-bottom: 2%;
-    margin-right: 2%;
-    display: inline-block;
+		margin-bottom: 2%;
+		margin-right: 2%;
+		display: inline-block;
 
 		&:nth-child(3n) {
 			margin-right: 0;
@@ -28,20 +25,20 @@ body {
 
 		.photo {
 			width: 250px;
-	    height: 250px;
-	    overflow: hidden;
-	    margin: 10px;
-	    position: relative;
+			height: 250px;
+			overflow: hidden;
+			margin: 10px;
+			position: relative;
 
 			img {
 				position: absolute;
-			  left: -1000%;
-			  right: -1000%;
-			  top: -1000%;
-			  bottom: -1000%;
-			  margin: auto;
-			  min-height: 100%;
-			  min-width: 100%;
+				left: -1000%;
+				right: -1000%;
+				top: -1000%;
+				bottom: -1000%;
+				margin: auto;
+				min-height: 100%;
+				min-width: 100%;
 			}
 		}
 
